@@ -4,6 +4,7 @@ Changelog
 1.0b3 (XXXX-XX-XX)
 ------------------
 
+* Respect the allow_comments field on an object and avoid calculations if no comments should be shown. [hannosch]
 * Automatically load the ZCML files of the captcha widgets if they are installed. [hannosch]
 * Fixed i18n domain in GenericSetup profiles to be ``plone``. Other values aren't supported for GS profiles. [hannosch]
 * Provide our own copy of the default one state workflow. Not all Plone sites have this workflow installed. [hannosch]
